/*
 * (#)build.gradle  0.1.0   05/22/2026
 *
 * @author   Jonathan Parker
 * @version  0.1.0
 * @since    0.1.0
 *
 * MIT License
 *
 * Copyright (c) 2026 Jonathan M. Parker
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

/*
 * The following system property must be set in HOME/.gradle/gradle.properties:
 *   systemProp.macosArchitecture=silicon
 *
 * Pass command line arguments to the Java program as follows:
 *   gradle <JavaExec Task> --args="arg1 arg2 arg3"
 *
 */

plugins {
	id 'java'
	id 'net.jmp.gradle.plugin.projectinfo-info'	version '0.3.0'
	id 'net.ltgt.errorprone'					version '4.2.0'
	id 'net.ltgt.nullaway'						version '2.3.0'
}

apply plugin: 'net.jmp.gradle.plugin.projectinfo-info'

ext {
	javaMainClass = 'net.jmp.demo.mockito.Main'
	project.group = 'net.jmp.demo.mockito'
	project.version = '0.1.0-SNAPSHOT'
	project.description = 'to demonstrate unit testing with JUnit 5 using mocking and spying'
}

java.sourceCompatibility = JavaVersion.VERSION_26

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
	compileOnly 		(libs.org.jspecify.jspecify)

	implementation		(libs.bundles.logging)

	errorprone			('com.uber.nullaway:nullaway:0.13.4')
	errorprone 			('com.google.errorprone:error_prone_core:2.49.0')

	runtimeOnly			(libs.bundles.logging.runtime)

	testRuntimeOnly		('org.junit.platform:junit-platform-launcher')
	testRuntimeOnly		('org.junit:jupiter-junit-jupiter')
	testRuntimeOnly		('org.mockito:mockito-junit-jupiter')
}

nullaway {
	annotatedPackages.add('net.jmp.demo.mockito')
}

tasks.compileJava {
    options.forkOptions.jvmArgs = ["-Xmx8192m", "--enable-native-access=ALL-UNNAMED"]
}

tasks.withType(Javadoc).configureEach {
    CoreJavadocOptions cjo = options as CoreJavadocOptions
    StandardJavadocDocletOptions sjdo = options as StandardJavadocDocletOptions

    cjo.encoding("UTF-8")
    cjo.addStringOption("source", "24")
    cjo.memberLevel = JavadocMemberLevel.PRIVATE

    sjdo.version(true)
}

tasks.withType(JavaExec).configureEach {
	jvmArgs = ["-Xmx8192m",
			   "--enable-native-access=ALL-UNNAMED",
			   "-ea"]

	println()
	println("JVM Arguments: " + jvmArgs)


	classpath = sourceSets.main.runtimeClasspath
	javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
	mainClass = javaMainClass
}

tasks.register('run', JavaExec) {
}
